--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-md-4">
             <form action="" (ngSubmit)="login()" ngNativeValidate>
@@ -25,4 +25,90 @@
         </div>
     </div>
 </div>
+ -->
+ <div class="content">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="assets/images/undraw_remotely_2j6y.svg" alt="Image" class="img-fluid">
+        </div>
+        <div class="col-md-6 contents">
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <div class="mb-4">
+              <h1>Survey <code class="text-danger-emphasis">dot Com</code></h1>
+              <h4 class="mb-4 mt-5">Sign In here to Explore</h4>
+            </div>
+            <form (ngSubmit)="login()" ngNativeValidate>
+              <div class="form-group first">
+                <label for="username">Username</label>
+                <input type="text" class=form-control name="name" [(ngModel)]="loginusername" required>
+                
+              </div>
+              <div class="form-group last mb-4">
+                <label class="form-label">Password</label>
+                <input type="password" class=form-control name="name" [(ngModel)]="loginuserpassword" required>
+            </div>
+              
+             
 
+              <input type="submit" value="Log In" class="btn btn-block btn-success">
+            <input type="button" data-bs-toggle="modal" data-bs-target="#mymodal" class="btn btn-block btn-primary" value="Create New Account">
+            </form>
+            </div>
+          </div>
+          
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="modal" id="mymodal">
+    <div class="modal-dialog">
+        
+        <div class="modal-content">
+            <div  class="modal-header">
+                <h1 class="modal-title">Register Here</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+           <div class="modal-body">
+            <form (ngSubmit)="register()" ngNativeValidate>
+                
+                <!-- <div class="form-group">
+                    <label class="form-label">UserId</label>
+                    <input type="text" class="form-control" name="id" [(ngModel)]="userId" required>
+                </div> -->
+                <div class="form-group">
+                    <label class="form-label">UserName</label>
+                    <input type="text" class="form-control" name="name" [(ngModel)]="userName" required>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Email</label>
+                    <input type="email" class="form-control" name="email" [(ngModel)]="userEmail" required>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Password</label>
+                    <input type="password" class="form-control" name="password" [(ngModel)]="userPassword" required pattern="{5,}" title="password should be more than 5 chars">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Mobile</label>
+                    <input type="text" class="form-control" name="mobile" [(ngModel)]="userMobile" required pattern="[6789]{1}[0-9]{9}" title="please enter valid phone number">
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-lg" type="submit">Register</button>
+                    <button class="btn btn-danger btn-lg" type="cancel">Cancel</button>
+                </div>
+            </form>
+            <br>
+            <p>Note: please contact {{mail}} to register as admin</p>
+
+
+
+
+           </div>
+
+
+        </div>
+    </div>
+  </div>
