--- a/src/app/userdashboard/userdashboard.component.html
+++ b/src/app/userdashboard/userdashboard.component.html
@@ -2,7 +2,7 @@
     <button mat-icon-button aria-label="Menu icon"  mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1>Survey Monkeys</h1>
+    <h1>Survey <small>dot COM</small> </h1>
   </mat-toolbar>
 
   <mat-sidenav-container autosize>
